--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+logo: "https://repository-images.githubusercontent.com/333836769/4f4bf780-6162-11eb-91f9-e0cf17d3a4a1"
+show_downloads: true
