--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "assemblyscript/std/assembly.json",
+  "extends": "../node_modules/assemblyscript/std/assembly.json",
   "include": ["./**/*.ts"]
 }
